src/test/deca/syntax/invalid/class/decl_class_interieur_methode.deca
/*
	Description: declaration une class intérieur une méthode

	Resultat syntaxiquement invalid

	Date: 20/01/2020

*/



class a extends b{
	

	protected void hello( ){
	  class c{
		   int z;
	       	 }
	}
	
}
